========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'v2' branch.
The master branch will rely on the Git repository history.


2021-01-08

 - Fixed bug with printer leaving trailing whitespace. Was annoying.


2020-12-20

 - Merged half of branch pr128_seltzered_beanpriceupdate on this side of
   Beancount. The other side will be patched to
   http://github.com/beancount/beanprice. This adds some trimming functions to
   beancount.ops.lifetimes.


2020-12-14

 - Fixed #588: Catch more narrow exceptions from plugins and render full stack
   when caught.


2020-11-25

 - Fixed #584 - a bug which was occurring because a pathological example using a
   very large precision was used in inferring the precision of a currency and a
   subsequent attempt to quantize a large number exceeded the default precision.


2020-11-22

 - Fixed bug in parser.parse_file() which when passed a filename in would leave
   the file unclosed.
 - Fixed latent bug with key/value parsing (incorrect grammar rule, was working
   anyway somehow).
 - Internal changes to lexer and parser to minimize diffs with ongoing work in
   'master' / C++ scanner/parser.


2020-11-17

 - Made it legal to insert a balance entry after account closure. It is a common
   case that transactions happen on the last day of an account and the balance
   directive operates at the beginning of the day. It was arguable whether
   directives should be allowed after closure; notes and documents were allowed
   because statements and phone calls may still occur after an account is
   closed, but I suppose you can make the argument that a statement balance can
   also occur at a later date, so voila, make it legal. You still cannot post
   transactions to a closed account, which is the thing that really matters.


2020-11-15

 - Render the tolerance in Balance directives (merged from Aaron Lindsay).


2020-11-01
